// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render w3w-suggestion render correct suggestion 1`] = `
<div>
  <div class="what3words-autosuggest-address" data-testid="address">
    <what3words-symbol color="#e11f26" size="17"></what3words-symbol>
    <div class="what3words-autosuggest-words" data-testid="words">
      apple.banana.cherry
    </div>
  </div>
  <div class="what3words-autosuggest-nearest-place" data-testid="nearest-place">
    <div class="what3words-autosuggest-nearest-place-text" data-testid="nearest-place-text">
      <div>
        near London
      </div>
      <div class="what3words-autosuggest-nearest-place-distance" data-testid="nearest-place-distance">
        1 km
      </div>
    </div>
  </div>
</div>
`;

exports[`Render w3w-suggestion should not now show nearest place when not provided 1`] = `
<div>
  <div class="what3words-autosuggest-address" data-testid="address">
    <what3words-symbol color="#e11f26" size="17"></what3words-symbol>
    <div class="what3words-autosuggest-words" data-testid="words">
      apple.banana.cherry
    </div>
  </div>
  <div class="what3words-autosuggest-nearest-place" data-testid="nearest-place">
    <div class="what3words-autosuggest-nearest-place-text" data-testid="nearest-place-text">
      <div class="what3words-autosuggest-nearest-place-distance" data-testid="nearest-place-distance">
        1 km
      </div>
    </div>
  </div>
</div>
`;

exports[`Render w3w-suggestion should not show distance when not provided 1`] = `
<div>
  <div class="what3words-autosuggest-address" data-testid="address">
    <what3words-symbol color="#e11f26" size="17"></what3words-symbol>
    <div class="what3words-autosuggest-words" data-testid="words">
      apple.banana.cherry
    </div>
  </div>
  <div class="what3words-autosuggest-nearest-place" data-testid="nearest-place">
    <div class="what3words-autosuggest-nearest-place-text" data-testid="nearest-place-text">
      <div>
        near London
      </div>
    </div>
  </div>
</div>
`;

exports[`Render w3w-suggestion should show sea flag when country is ZZ 1`] = `
<div>
  <div class="what3words-autosuggest-address" data-testid="address">
    <what3words-symbol color="#e11f26" size="17"></what3words-symbol>
    <div class="what3words-autosuggest-words" data-testid="words">
      apple.banana.cherry
    </div>
  </div>
  <div class="what3words-autosuggest-nearest-place" data-testid="nearest-place">
    <div class="what3words-autosuggest-flag what3words-autosuggest-flag-zz" data-testid="flag"></div>
    <div class="what3words-autosuggest-nearest-place-text" data-testid="nearest-place-text">
      <div>
        near London
      </div>
      <div class="what3words-autosuggest-nearest-place-distance" data-testid="nearest-place-distance">
        1 km
      </div>
    </div>
  </div>
</div>
`;
